# parrot

./: .dockerignore  .env.example  Cargo.toml  fly.toml
src/: client.rs  errors.rs  lib.rs  main.rs  utils.rs
src/commands/: autopause.rs  clear.rs  leave.rs  manage_sources.rs  mod.rs  now_playing.rs  pause.rs  play.rs  queue.rs  remove.rs  repeat.rs  resume.rs  seek.rs  shuffle.rs  skip.rs  stop.rs  summon.rs  version.rs  volume.rs  voteskip.rs
src/commands/dnd/: mod.rs  roll.rs
src/commands/music/: autopause.rs  clear.rs  leave.rs  manage_sources.rs  mod.rs  pause.rs  play.rs  remove.rs  repeat.rs  resume.rs  seek.rs  shuffle.rs  skip.rs  stop.rs  summon.rs  version.rs  voteskip.rs
src/commands/warframe/: cetus.rs  fissure.rs  mod.rs
src/guild/: settings.rs
src/handlers/: idle.rs  serenity.rs  track_end.rs
src/messaging/: message.rs  messages.rs  mod.rs
src/metrics/: mod.rs
src/sources/: ffmpeg.rs  spotify.rs  youtube.rs
