[package]
name = "parrot"
version = "1.6.0"
authors = ["aquelemiguel"]
edition = "2021"
description = "A Discord music bot built in Rust"
repository = "https://github.com/aquelemiguel/parrot"
license = "MIT"
keywords = ["discord", "music-bot", "rust"]

[dependencies]
dotenvy = "0.15.7"
lazy_static = "1.4.0"
rand = "0.8.5"
regex = "1.9.1"
rspotify = { version = "0.11.7", default_features = false, features = ["client-reqwest", "reqwest-rustls-tls"] }
serde_json = "1.0.103"
url = "2.4.0"
serde = "1.0.171"

# NOTE: locked until serenity/songbird update async-tungstenite
hyper-rustls = "=0.23.2"
tokio-rustls = "=0.23.4"
reqwest = { version = "=0.11.17", default-features = false, features = ["rustls-tls"] }

[dependencies.songbird]
version = "0.3.2"
features = ["builtin-queue", "yt-dlp"]

[dependencies.serenity]
version = "0.11.6"
default-features = false
features = [
  "cache",
  "collector",
  "client",
  "gateway",
  "model",
  "rustls_backend",
  "unstable_discord_api",
  "voice",
]

[dependencies.tokio]
version = "1.29.1"
features = ["macros", "rt-multi-thread"]

[patch.crates-io]
chrono = { git = "https://github.com/pitdicker/chrono.git", rev = "6f456548a89902041e1ef5da41172c32d7a6854b" }
songbird = { git = "https://github.com/Txuritan/songbird.git", rev = "4b538916725dc3d9eadaa1c8bb297bb1ba686fe5" }
